2002-10-01  Jody Goldberg <jody@gnome.org>

	* Release 2.1.0.1

2002-09-09  Jody Goldberg <jody@gnome.org>

	* mime-edit-dialog.c (update_sensitivity) : As FCrozat points out
	  use category default has been lobotomized.

2002-08-31  Jacob Berkman  <jacob@krunk.local.>

	* Makefile.am (gnome_file_types_properties_LDADD): link against -lpopt

2002-08-21  Jody Goldberg <jody@gnome.org>

	* Release 2.1.0

2002-08-19  Ross Burton  <ross@burtonini.com>

	* file-types.desktop.in: Fix the desktop file so that it
	validates.

2002-08-19  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=88354
	* file-types.desktop.in : minor update

2002-08-10  Jody Goldberg <jody@gnome.org>

	* file-types-properties.glade : fix missed capitalization for the
	ui-review.

2002-08-07  Jody Goldberg <jody@gnome.org>

	* mime-edit-dialog.c (mime_edit_dialog_get_app) : Be extra anal, just
	  in case the db is corrupt.

2002-08-05  Jody Goldberg <jody@gnome.org>

	* mime-edit-dialog.c (mime_edit_dialog_get_app) : work around
	  gnome_file_entry's propensity for prepending the current dir if none
	  is specified.  This allows a user to type a nme with no
	  qualifications and have it look things up in the path.

	* mime-type-info.c (mime_category_info_save) : lobotomize this just in
	  case.

2002-08-03  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=88775
	* file-types-properties.glade : make the other sub dialogs modal too.

2002-08-01  Federico Mena Quintero  <federico@ximian.com>

	* file-types-properties.glade: Made the file entries modal as they
	live in modal dialogs.  Fixes #89370.

	* service-edit-dialog.c (service_add_dialog_new): Return a
	GObject, not a GtkWidget.

	* file-types-capplet.c (add_service_cb): Do not assign a GtkWidget
	to a GObject.

2002-07-17  Jody Goldberg <jody@gnome.org>

	* mime-type-info.c (mime_type_info_new) : no need to preload the icon.
	(mime_type_info_load_all) : nor here.
